<resources>
    <string name="app_name">Bhoodie_new2</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="recommend">Recommend</string>
    <string name="abtus">About Us</string>
    <string name="fav">Favourites</string>
    <string name="showmap">Show Map</string>
    <string name="userinfo">Profile</string>
    <string name="title_activity_recommendation">Recommendation</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fullname">Full Name</string>
    <string name="preferences">Preferences</string>
    <string name="opening">Opening Hours:</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="test">TEST</string>
    <string name="vat">Vat:</string>
    <string name="servicecharge">SC:</string>
    <string name="submit">Submit</string>
    <string name="fooditem">Food Item</string>
    <string name="price">Price</string>
    <string name="delivery">Delivery</string>
    <string name="messagehint">Type your message</string>
    <string name="reviewtext">What do you think about the place? (Optional)</string>
    <string name="emailcolon">Email:</string>
    <string name="fullnamecolon">Full Name:</string>
    <string name="yourprofile">Your Profile</string>
    <string name="changename">Change Name</string>
    <string name="logout">Logout</string>
    <string name="recommendations">Recommendations</string>
    <string name="bhoodiedesc"><p>Bhoodie is a restaurant recommendation and food ordering tool following a by the user, for the user approach of providing food suggestions to the user. Bhoodie is packed with features like recommendation and chatbot with countless small features sprinkled throughout the app. Try Bhoodie and find all of its features.</p></string>
    <string name="teammembers">Samrat Subedi\nPrayog Paudel\nPrashant Acharya\nShreyam Adhikari</string>
    <string name="team">The Team:</string>
    <string name="contact">Contact Us At:</string>
    <string name="emailprayog"><u>ppaudel93@gmail.com</u></string>
    <string name="emailshreyam"><u>shreyam1008@gmail.com</u></string>
    <string name="abouttheproject">Project Link:</string>
    <string name="chatbot">ChatBot</string>
    <string name="githubandroid">https://github.com/ppaudel93/Bhoodie_new</string>
    <string name="githubserver">https://github.com/shreyam1008/foody</string>

    <string-array name="vatoption">
        <item>Any</item>
        <item>No</item>
    </string-array>
    <string-array name="priceoption">
        <item>Any</item>
        <item>Low</item>
        <item>Med</item>
        <item>High</item>
    </string-array>
</resources>
