<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/show_map"
            android:icon="@drawable/if_facebook_places_115480"
            android:title="@string/showmap" />
        <item
            android:id="@+id/recommend_id"
            android:icon="@drawable/if_bookmark_670641"
            android:title="@string/recommend" />
        <item
            android:id="@+id/favs_id"
            android:icon="@drawable/if_like_outline_309057"
            android:title="@string/fav" />
        <item
            android:id="@+id/user_profile"
            android:icon="@drawable/if_user_309035"
            android:title="@string/userinfo" />
        <item
            android:id="@+id/about_id"
            android:icon="@drawable/if_question_416921"
            android:title="@string/abtus" />
    </group>
</menu>