<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="167.33dp"
            android:layout_height="214dp"
            android:layout_gravity="center"
            android:background="@drawable/bhoodie" />

        <EditText
            android:id="@+id/emaillogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:background="@drawable/roundedrectangle"/>

        <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
            android:background="@drawable/roundedrectangle"/>


        <Button
            android:id="@+id/loginbutton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/textprimary"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/roundedbutton"/>
        <Button
            android:id="@+id/registerbutton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/textprimary"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/roundedbutton"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>